<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- White rounded card -->
        <LinearLayout
            android:layout_width="384dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_white_card"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/join_synced"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"

                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="#333333"
                android:textColorHint="#333333"
                app:cornerRadius="25dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:autofillHints=""

                android:background="@drawable/edit_text_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#333333"
                android:textColorHint="#333333" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"

                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#333333"
                android:textColorHint="#333333" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"

                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/name"
                android:padding="15dp"
                android:textColor="#333333"
                android:textColorHint="#333333" />

            <TextView
                android:id="@+id/tvChooseAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/choose_avatar"
                android:textSize="16dp" />


            <GridLayout
                android:layout_width="290dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false">

                <!-- Avatar buttons -->


                <ImageView
                    android:id="@+id/avatar1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="4dp"
                    android:background="@drawable/rounded_icon_bg"
                    android:contentDescription="@string/avatar1_desc"
                    android:src="@drawable/ic_avatar1" />

                <ImageView
                    android:id="@+id/avatar2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar2"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar2" />

                <ImageView
                    android:id="@+id/avatar5"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar5"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar5" />

                <ImageView
                    android:id="@+id/avatar4"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar4"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar4" />

                <ImageView
                    android:id="@+id/avatar3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar3"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar3" />

                <ImageView
                    android:id="@+id/avatar6"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar6"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar6" />

                <ImageView
                    android:id="@+id/avatar8"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar8"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar8" />

                <ImageView
                    android:id="@+id/avatar7"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_avatar7"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_avatar7" />

            </GridLayout>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="#9A61FF"
                android:padding="15dp"
                android:text="Register"
                android:textColor="@android:color/white"
                app:cornerRadius="25dp" />

            <TextView
                android:id="@+id/tvLoginHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="12dp"
                android:text="@string/login_hint"
                android:textColor="#3653FF"
                android:textSize="18dp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>